--- a/_config.yml
+++ b/_config.yml
@@ -32,14 +32,9 @@ author:
   email            : "none@example.org" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  googlescholar    : "https://scholar.google.co.kr/citations?user=MMmX4wMAAAAJ&hl=ko&oi=ao"
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-5131-1007"
+  researchgate     : "https://www.researchgate.net/profile/Seungyeon-Moon?ev=hdr_xprf"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
